// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rhachet upgrade given: [case2b] upgrade --roles -ghostrole (lead-dash sentinel decode) when: [t0] rhachet upgrade --roles -ghostrole then: the decoded error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: pnpm install failed with exit code 1 — a requested package does not exist

{
  "hint": "check how rhachet-roles--ghostrole is spelt — the registry has no such package",
  "kind": "package-absent",
  "installExitCode": 1,
  "packages": [
    "rhachet-roles--ghostrole"
  ],
  "output": "$OUTPUT_MASKED"
}

[args] upgrade,--roles,-ghostrole

"
`;

exports[`rhachet upgrade given: [case3] upgrade --help when: [t0] rhachet upgrade --help then: stdout matches snapshot 1`] = `
"Usage: rhachet upgrade [options]

upgrade rhachet, role, and/or brain packages to latest versions

Options:
  --self                upgrade rhachet itself
  --roles <roles...>    role specifiers to upgrade (* for all installed)
  --brains <brains...>  brain specifiers to upgrade (* for all installed)
  --which <which>       which installs to upgrade: local, global, or both
  -h, --help            display help for command
"
`;

exports[`rhachet upgrade given: [case4] repo with rhachet-roles-ehmpathy@1.17.20 installed when: [t1] rhachet upgrade --roles ehmpathy/mechanic then: stdout.header matches snapshot 1`] = `
"📦 upgrade (pnpm)
   └── rhachet-roles-ehmpathy@latest"
`;

exports[`rhachet upgrade given: [case4] repo with rhachet-roles-ehmpathy@1.17.20 installed when: [t1] rhachet upgrade --roles ehmpathy/mechanic then: stdout.summary matches snapshot 1`] = `"✨ 1 role(s) upgraded: ehmpathy/mechanic"`;

exports[`rhachet upgrade given: [case7] repo with rhachet-brains-anthropic@0.1.0 installed when: [t1] rhachet upgrade --brains anthropic then: stdout.header matches snapshot 1`] = `
"📦 upgrade (pnpm)
   └── rhachet-brains-anthropic@latest"
`;

exports[`rhachet upgrade given: [case7] repo with rhachet-brains-anthropic@0.1.0 installed when: [t1] rhachet upgrade --brains anthropic then: stdout.summary matches snapshot 1`] = `"✨ 1 brain(s) upgraded: anthropic"`;

exports[`rhachet upgrade given: [case8] repo with rhachet-roles-ehmpathy in package.json but not linked when: [t1] rhachet upgrade --roles * then: stdout.header matches snapshot 1`] = `
"📦 upgrade (pnpm)
   └── rhachet-roles-ehmpathy@latest"
`;

exports[`rhachet upgrade given: [case8] repo with rhachet-roles-ehmpathy in package.json but not linked when: [t1] rhachet upgrade --roles * then: stdout.summary matches snapshot 1`] = `"✨ 1 role(s) upgraded: ehmpathy/*"`;

exports[`rhachet upgrade given: [case10] --roles ehmpathy/* with unlinked package when: [t1] rhachet upgrade --roles ehmpathy/* then: stdout.summary matches snapshot 1`] = `"✨ 1 role(s) upgraded: ehmpathy/*"`;

exports[`rhachet upgrade given: [case11] --roles ehmpathy/* with linked role when: [t1] rhachet upgrade --roles ehmpathy/* then: stdout.summary matches snapshot 1`] = `
"│ ✨ permissions applied:
✨ 1 role(s) linked
✨ 1 role(s) initialized
✨ hooks
   └─ 14 created
✨ 1 role(s) upgraded: ehmpathy/*"
`;

exports[`rhachet upgrade given: [case12.1] --roles ehmpathy/mechanic where <repo>/.claude and the default dir hold the same name when: [t0] rhachet upgrade --roles ehmpathy/mechanic then: the brain dir tree is locked to a snapshot 1`] = `
"🧠 brain dir (default)
   ├─ moved
   │  ├─ .claude/settings.$STAMP.bak.json → .agent/.actors/actor.via.slug=.default/brain/.claude/settings.$STAMP.bak.json
   │  └─ .claude/settings.json → .agent/.actors/actor.via.slug=.default/brain/.claude/settings.json (replaced)
   ├─ linked
   │  └─ .claude → .agent/.actors/actor.via.slug=.default/brain/.claude
   └─ boot.md
      └─ created — 1 role"
`;

exports[`rhachet upgrade given: [case12] --roles ehmpathy/mechanic with linked role when: [t1] rhachet upgrade --roles ehmpathy/mechanic then: stdout.summary matches snapshot 1`] = `
"│ ✨ permissions applied:
✨ 1 role(s) linked
✨ 1 role(s) initialized
✨ hooks
   └─ 14 created
✨ 1 role(s) upgraded: ehmpathy/mechanic"
`;

exports[`rhachet upgrade given: [case12] --roles ehmpathy/mechanic with linked role when: [t1] rhachet upgrade --roles ehmpathy/mechanic then: the brain dir tree is locked to a snapshot 1`] = `
"🧠 brain dir (default)
   ├─ moved
   │  ├─ .claude/settings.$STAMP.bak.json → .agent/.actors/actor.via.slug=.default/brain/.claude/settings.$STAMP.bak.json
   │  └─ .claude/settings.json → .agent/.actors/actor.via.slug=.default/brain/.claude/settings.json
   ├─ linked
   │  └─ .claude → .agent/.actors/actor.via.slug=.default/brain/.claude
   └─ boot.md
      └─ created — 1 role"
`;

exports[`rhachet upgrade given: [case13] --roles ehmpathy/designer with unlinked role (mechanic is linked) when: [t1] rhachet upgrade --roles ehmpathy/designer then: stdout.summary matches snapshot 1`] = `"✨ 1 role(s) upgraded: ehmpathy/designer"`;

exports[`rhachet upgrade given: [case15] the pnpm-presence probe never answers when: [t0] rhachet upgrade --which global, with the probe wedged then: the WHOLE rendered frame is pinned, not merely its tokens 1`] = `
"⚠️ heads up — could not tell whether pnpm is installed
   ├── the pnpm-presence probe did not answer within 10s
   ├── so this upgrade proceeds with npm, which may not be your usual
   ├── likely an unresponsive mount named in your PATH environment variable
   └── once that mount answers again, re-run this upgrade — it re-probes each time"
`;

exports[`rhachet upgrade given: [case16] local install dies by signal (unclassified) — the human sees a framed report, never a raw crash dump when: [t0] rhachet upgrade --self --which local, with pnpm dead by signal then: the WHOLE framed report is pinned, not merely its tokens 1`] = `
"
💥 MalfunctionError: pnpm install failed without an exit code (killed, or never started) — cause unclassified

{
  "hint": "read the pnpm output above — its last error line names the cause — then confirm whether the packages landed with \`rhx --version\`",
  "kind": "unclassified",
  "installExitCode": null,
  "packages": [
    "rhachet"
  ],
  "output": "filler line 13\\nfiller line 14\\nfiller line 15\\nfiller line 16\\nfiller line 17\\nfiller line 18\\nfiller line 19\\nfiller line 20\\nfiller line 21\\nfiller line 22\\nfiller line 23\\nfiller line 24\\nfiller line 25\\nfiller line 26\\nfiller line 27\\nfiller line 28\\nfiller line 29\\nfiller line 30\\nRHACHET_TEST_PM_LOG_TAIL_LINE_WITHIN_THE_TAIL\\n",
  "outputBytes": 533
}

[args] upgrade,--self,--which,local

"
`;

exports[`rhachet upgrade given: [case17] a linked role whose brain adapter refuses every hook write when: [t0] rhachet upgrade --roles test/tester --which local then: stdout.header matches snapshot 1`] = `
"🫧 skip (local refs): rhachet-roles-test

🔧 init 1 role(s)...

📚 link role repo=test/role=tester
   ├─ links
   │  ├─ ✓ .agent/readme.md (unchanged)
   │  ├─ ✓ .agent/repo=.this/readme.md (unchanged)
   │  ├─ ↻ .agent/repo=test/readme.md (updated)
   │  ├─ ✓ .agent/repo=test/.gitignore (unchanged)
   │  ├─ ↻ .agent/repo=test/role=tester/readme.md (updated)
   │  ├─ ↻ .agent/repo=test/role=tester/briefs (updated)
   │  └─ ↻ .agent/repo=test/role=tester/skills (updated)
   └─ stats
      ├─ 1 brief(s)
      └─ 1 skill(s)

✨ 1 role(s) linked
✨ 1 role(s) initialized

🔭 search for linked roles with hooks...
   └─ test/tester

🪝 apply hooks to brains...
   └─ ✗ test/tester → anthropic/claude/code: Error: adapter refused the hook write

💥 MalfunctionError: 1 hook sync error — role hooks may be uninstalled

hint: hooks did not land — fix the hook sync faults above, then rerun \`rhx upgrade\`"
`;
